@@ -489,10 +489,10 @@ if (TYPO3_MODE=='BE')	{
 				--palette--;LLL:EXT:lang/locallang_general.xml:LGL.author;5;;3-3-3, abstract, keywords, description,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.files,
 				media,
-			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.access,
-				starttime, endtime, fe_login_mode, fe_group, extendToSubpages,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.options,
 				TSconfig;;6;nowrap;6-6-6, storage_pid;;7, l18n_cfg, module, content_from_pid,
+			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.access,
+				starttime, endtime, fe_login_mode, fe_group, extendToSubpages,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.extended,
 		'),
 			// external URL
@@ -502,10 +502,10 @@ if (TYPO3_MODE=='BE')	{
 				url;;;;3-3-3, urltype,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.files,
 				media,
-			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.access,
-				starttime, endtime, fe_group, extendToSubpages,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.options,
 				TSconfig;;6;nowrap;5-5-5, storage_pid;;7, l18n_cfg,
+			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.access,
+				starttime, endtime, fe_group, extendToSubpages,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.extended,
 		'),
 			// shortcut
@@ -515,10 +515,10 @@ if (TYPO3_MODE=='BE')	{
 				shortcut;;;;3-3-3, shortcut_mode,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.files,
 				media,
-			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.access,
-				starttime, endtime, fe_group, extendToSubpages,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.options,
 				TSconfig;;6;nowrap;5-5-5, storage_pid;;7, l18n_cfg,
+			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.access,
+				starttime, endtime, fe_group, extendToSubpages,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.extended,
 		'),
 			// not in menu
@@ -526,10 +526,10 @@ if (TYPO3_MODE=='BE')	{
 				'doktype;;2;button;1-1-1, hidden, nav_hide, title;;3;;2-2-2, subtitle,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.files,
 				media,
-			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.access,
-				starttime, endtime, fe_login_mode, fe_group, extendToSubpages,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.options,
 				TSconfig;;6;nowrap;5-5-5, storage_pid;;7, l18n_cfg, module, content_from_pid,
+			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.access,
+				starttime, endtime, fe_login_mode, fe_group, extendToSubpages,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.extended,
 		'),
 			// mount page
@@ -539,10 +539,10 @@ if (TYPO3_MODE=='BE')	{
 				mount_pid;;;;3-3-3, mount_pid_ol,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.files,
 				media,
-			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.access,
-				starttime, endtime, fe_login_mode, fe_group, extendToSubpages,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.options,
 				TSconfig;;6;nowrap;5-5-5, storage_pid;;7, l18n_cfg, module, content_from_pid,
+			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.access,
+				starttime, endtime, fe_login_mode, fe_group, extendToSubpages,
 			--div--;LLL:EXT:cms/locallang_tca.xml:pages.tabs.extended,
 		'),
 			// spacer
